# lecture-testing-task

./: .gitignore
.github/workflows/: ci.yml
05_hw/: CMakeLists.txt  bench.c  main.c  stack.c  stack.h  tests.c
